fix: make dark mode work

--- a/src/pages/catalog/components/LikeFilter/LikeFilter.module.css
+++ b/src/pages/catalog/components/LikeFilter/LikeFilter.module.css
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  flex-flow: column nowrap;
   align-items: center;
   gap: 8px;
 }
